recursion.lessons.recursion.koch.Koch.scala.error
Koch:18: error: type mismatch;
 found   : Double
 required: Int
		snowSide(length-1, length);
                               ^